edit customer page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div style="height: 80px;"></div>
+    <div style="height: 70px;"></div>
     <div class=" row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
@@ -15,11 +15,12 @@
             </div>
         </div>
     </div>
-    <br><br>
+    <br>
     <div class="row">
         <div class="id2"><img [src]="LOGO2" /><a class="link" href="/home"
-                (click)='isOn=false; isReports=false'>Customers</a></div>
-        <div class="id2"><img [src]="LOGO3" /><a class="link hand" (click)='isReports=true; isOn=null'>Reports</a></div>
+                (click)='isBack=true; isOn=false; isReports=false'>Customers</a></div>
+        <div class="id2"><img [src]="LOGO3" /><a class="link hand"
+                (click)='isReports=true; isOn=null; isBack=true'>Reports</a></div>
         <div class="id2 dropdown"><img [src]="LOGO4" /><a class="link dropbtn" href="/home">Profile</a>
             <div class="dropdown-content">
                 <a href="#">My Account</a>
@@ -32,8 +33,20 @@
     </div>
     <app-customers *ngIf="isOn == false"></app-customers>
     <app-homepage *ngIf="isOn == true"></app-homepage>
-    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2"
-            [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
+    <div class="row">
+        <div (click)='isOn=true; isReports=false; isBack=false;' *ngIf="isBack == true" class="col-4 text-left">
+            <button type="button" class="btn confirmBtn border-dark rounded" [routerLink]="['/home']">Back</button>
+        </div>
+
+        <div *ngIf="isBack == true" class="col-4 text-center"><button type="button"
+                class="btn confirmBtn border-dark rounded p-2" [routerLink]="['/addcustomer']"><i
+                    class='fa fa-plus'></i>
+                <strong> Add New Customer </strong></button>
+        </div>
+    </div>
+
+    <div *ngIf="isBack == false" class="col-sm text-center"><button type="button"
+            class="btn confirmBtn border-dark rounded p-2" [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
             <strong> Add New Customer </strong></button>
     </div>
 
