--- a/src/app/home/reports/reports.component.css
+++ b/src/app/home/reports/reports.component.css
@@ -2,25 +2,30 @@ tr:nth-child(even) {
     background-color: #f0ebeb;
 }
 
-#table-wrapper {
-    position: relative;
-}
-
-#table-scroll {
-    height: 350px;
-    overflow: auto;
-    margin-top: 20px;
-}
-
-#table-wrapper table {
-    width: 100%;
-}
-
-#table-wrapper table thead th .text {
+.btn-right {
     position: absolute;
-    top: -20px;
-    z-index: 2;
-    height: 50px;
-    width: 55%;
-    border: 1px solid red;
+    right: 15px;
+    margin-right: 60px;
+    margin-top: 5px;
+}
+
+.btn-left {
+    position: absolute;
+    left: 5px;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+select {
+    width: 140px;
+    height: 28px;
+    border: 1px solid #46afec;
+}
+
+input {
+    border: 1px solid #46afec;
+}
+
+table {
+    padding: 0%;
 }
