search filter in reports component

--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -21,7 +21,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-4 inputDiv">
-                        <input class="rounded w-100" type="text" id="name" name="name" placeholder="Enter New Name"
+                        <input class="rounded w-100 inp" type="text" id="name" name="name" placeholder="Enter New Name"
                             [(ngModel)]="customerName">
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-4 inputDiv">
-                        <input class="rounded w-100" type="text" id="phone" name="phone"
+                        <input class="rounded w-100 inp" type="text" id="phone" name="phone"
                             placeholder="Enter New Mobile Number" [(ngModel)]="customerPhone" required>
                     </div>
                 </div>
