--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,10 @@ input{
 .blue {
     color: #46afec;
 }
+
+.inp {
+	height: 35px;
+	border: 1px solid #46afec;
+	border-radius: 10px;
+	background-color: #f1faff;
+}
