--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container mt-3">
     <div id="table-wrapper">
         <table id="tbl" class="table table-bordered">
             <thead>
                 <tr>
                     <th class="name">
                         <div class="input-group">
-                            <input matInput class="w-100 inp" id="name" type="text" placeholder="  Name Search"
-                                aria-label="Search" autofocus>
+                            <input class="w-100 inp" id="name" type="text" placeholder="  Name Search"
+                                aria-label="Search">
                         </div>
                     </th>
                     <th class="phone">
@@ -54,5 +54,4 @@
             </tbody>
         </table>
     </div>
-    <br>
 </div>
