--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -12,15 +12,15 @@
                 <div class="col-8 text-center rounded-circle">
                     <h5 class="logoColor border border-dark rounded p-2">
                         {{borrowerName}}<br>
-                        <i class="material-icons icon">phone</i>  {{borrowerPhone}} <br>
-                        <i class='fas fa-rupee-sign icon'></i>  {{balance}}
+                        <i class="material-icons icon">phone</i> {{borrowerPhone}} <br>
+                        <i class='fas fa-rupee-sign icon'></i> {{balance}}
                     </h5>
                 </div>
             </div>
             <br><br><br>
 
             <form [formGroup]='creditForm' (ngSubmit)="onSubmit()">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-1"></div>
 
                     <div class="col-4 text-center">
@@ -42,8 +42,26 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
                 <div id="block" style="margin-left: 10%; margin-right: 10%;">
+                    <div class="row">
+                        <div class="col-3">
+                        </div>
+                        <div class="col-2 text-right">
+                            <label for="name" class="d-inline label">Date :</label>
+                        </div>
+                        <div class="col-3">
+                            <select href="#" id="txnType" class="dropdown-toggle inp selectField btn w-100"
+                                data-toggle="dropdown" role="button" required>
+                                <option value="" disabled selected>
+                                    Select an Option
+                                </option>
+                                <option value="DEBIT">Credit Given</option>
+                                <option value="CREDIT">Cash Received</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br>
                     <div class="row">
                         <div class="col-3">
                         </div>
@@ -65,7 +83,8 @@
                         </div>
                         <div class="col-3">
                             <input [ngClass]="{'invalid' : isValid('amount')}" class="rounded w-100"
-                                formControlName="amount" min="0" type="number" id="amount" placeholder="Amount" required>
+                                formControlName="amount" min="0" type="number" id="amount" placeholder="Amount"
+                                required>
                             <div class="feedback" *ngIf="this.isNaN">Enter amount
                             </div>
                             <div class="feedback" *ngIf="isValid('amount')">
