--- a/src/app/home/customers/customers.component.css
+++ b/src/app/home/customers/customers.component.css
@@ -27,13 +27,14 @@ td, th {
     padding: 4px;
 }
 
-input[type="text"] {
+input {
 transition: background-color 0.1s;
 font-size: 17px;
 background-color : #f1faff;
 font-weight: 100;
 letter-spacing: 0.01em;
 box-shadow: none;
+padding: 2px 10px 2px 15px;
 }
 
 input:focus {
