--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div style="height: 80px;"></div>
+    <div style="height: 20px;"></div>
     <div class=" row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
@@ -17,9 +17,10 @@
     </div>
     <br><br>
     <div class="row">
-        <div class="id2"><img [src]="LOGO2" /><a class="link" href="/home"
+        <div class="id2"><img [src]="LOGO2" /><a class="link" href="/home" [routerLink]="'customer'"
                 (click)='isOn=false; isReports=false'>Customers</a></div>
-        <div class="id2"><img [src]="LOGO3" /><a class="link hand" (click)='isReports=true; isOn=null'>Reports</a></div>
+        <div class="id2"><img [src]="LOGO3" /><a class="link hand" [routerLink]="'reports'"
+                (click)='isReports=true; isOn=null'>Reports</a></div>
         <div class="id2 dropdown"><img [src]="LOGO4" /><a class="link dropbtn" href="/home">Profile</a>
             <div class="dropdown-content">
                 <a href="http://localhost:4200/myaccount">My Account</a>
@@ -27,14 +28,20 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-6"> <button type="submit"
+                class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
+                (click)="goBack()">back</button></div>
+        <div class="col-5 text-right"><button type="button" class="btn confirmBtn border-dark rounded p-2"
+                [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
+                <strong> Add New Customer </strong></button>
+        </div>
+    </div>
     <div *ngIf='isReports==true'>
         <app-reports></app-reports>
     </div>
     <app-customers *ngIf="isOn == false"></app-customers>
     <app-homepage *ngIf="isOn == true"></app-homepage>
-    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2" [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
-            <strong> Add New Customer </strong></button>
-    </div>
 
     <div class="modal centered" id="logoutModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm">
@@ -45,10 +52,14 @@
                         <form action="#" method="post">
                             <div class="row">
                                 <div class="col-6">
-                                    <input type="submit" class="btn btn-square confirmBtn border border-dark rounded p-2" (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal" value="Yes" />
+                                    <input type="submit"
+                                        class="btn btn-square confirmBtn border border-dark rounded p-2"
+                                        (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal"
+                                        value="Yes" />
                                 </div>
                                 <div class="col-6 text-right">
-                                    <button class="btn btn-square confirmBtn border border-dark rounded p-2    " data-dismiss="modal"> No </button>
+                                    <button class="btn btn-square confirmBtn border border-dark rounded p-2    "
+                                        data-dismiss="modal"> No </button>
                                 </div>
                             </div>
                         </form>
