--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,34 @@
     color: white;
 }
 
-input{
+input {
+    transition: background-color 0.1s;
+    font-size: 17px;
+    background-color : #f1faff;
+    font-weight: 100;
+    letter-spacing: 0.01em;
+    box-shadow: none;
     border: 1px solid #46afec;
+    padding: 2px 10px 2px 15px;
+}
+
+input:focus {
+  outline: none;
+  background-color: white;
+  box-shadow: 1px 1px 2px 3px #8ec7e9;
+}
+
+.selectField {
+    border: 1px solid #46afec;
+    color: rgb(82, 81, 81);
+    background-color: white;
+}
+
+.inp{
+    height: 35px;
+    border: 1px solid #46afec;
+    border-radius: 	10px;
+    background-color : #f1faff;
 }
 
 .hand {
