--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <br>
     <div class="row">
         <table id="tbl" class="table table-bordered">
             <thead>
@@ -18,9 +19,7 @@
                     <th width="15%"></th>
                     <th><select id="txnType" class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown"
                             role="button" aria-haspopup="true" aria-expanded="false">
-                            <option value="" selected>
-                                Select an Option
-                            </option>
+                            <option value="" selected>Select an Option</option>
                             <option value="CREDIT">Credit</option>
                             <option value="DEBIT">Debit </option>
                         </select>
@@ -28,7 +27,7 @@
                     <th width="30%" class="text-center">
                         <button type="submit"
                             class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
-                            data-toggle="modal" data-target="#logoutModal">Select
+                            data-toggle="modal" data-target="#dateModal">Select
                             Date</button>
                     </th>
                 </tr>
@@ -61,18 +60,25 @@
             </tbody>
         </table>
         <div class="btn-right">
-            <button (click)='search()' type="submit"
-                class="btn confirmBtn border border-dark nav-item nav-link-edit">Search</button>
+            <button (click)='search(); isReset=true' type="submit"
+                class="btn confirmBtn border border-dark nav-item nav-link-edit"><i class="fa fa-search"
+                    aria-hidden="true"></i></button>
         </div>
+        <div *ngIf='isReset==true'>
+            <span class="btn-reset"><a href="" (click)='getListAtStart(); isSearch=false'>Reset</a></span>
+        </div>
+
     </div>
+    <br>
     <div class="col-12 text-center" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 
-    <div class="modal centered" id="logoutModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal centered" id="dateModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm-12">
             <div class="modal-content">
                 <div class="modal-body">
+                    <span class="cancel-icon text-left"><a data-dismiss="modal"><strong>x</strong></a></span>
                     <p class="text-center"><strong>Select Start Date and End Date</strong><br /></p>
                     <div class="actionsBtns text-center">
                         <div class="col-12 text-center">
@@ -82,16 +88,9 @@
                                 aria-label="Search" autofocus />
                         </div>
                         <br>
-                        <div class="row">
-                            <div class="col-6">
-                                <button class="btn btn-square confirmBtn border border-dark rounded p-2    "
-                                    data-dismiss="modal"> Cancel </button>
-                            </div>
-                            <div class="col-6 text-center">
-                                <input (click)='searchByDate()' type="submit"
-                                    class="btn btn-square confirmBtn border border-dark rounded p-2"
-                                    data-dismiss="modal" value="Search">
-                            </div>
+                        <div class="text-center">
+                            <button class="btn btn-square confirmBtn border border-dark rounded"
+                                data-dismiss="modal">Ok</button>
                         </div>
                     </div>
                 </div>
