--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-7 text-right">
                     <button class="btn confirmBtn border border-dark signUpButton"><a
-                            style="text-decoration: none; color: white;" href="https://www.google.com/">SignUp</a>
+                            style="text-decoration: none; color: white;" [routerLink]="['/sign-up']">SignUp</a>
                     </button>
                 </div>
             </div>
