--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,9 @@
     <div *ngIf="isBack == true" style="height: 20px;"></div>
     <div class=" row">
         <div *ngIf="isBack == true" (click)='isOn=true; isReports=false; isBack=false' class="col-sm-2 text-center">
-            <button type="button" class="btn btn-size confirmBtn border-dark rounded" [routerLink]="['/home']">
+            <a class="btn-size hand" [routerLink]="['/home']">
                 <strong>
-                    < </strong></button>
+                    < </strong></a>
         </div>
         <div *ngIf='isBack==false' class="col-sm-2"></div>
         <div class="col-sm-10">
