--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div *ngIf="router.url === '/home/reports'" class="container">
     <br>
     <div class="row">
+
         <table id="tbl" class="table table-bordered">
             <thead>
                 <tr>
@@ -29,6 +30,11 @@
                             class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
                             data-toggle="modal" data-target="#dateModal">Select
                             Date</button>
+                            <span> <button (click)='search(); isReset=true' type="submit"
+                                    class="btn confirmBtn border border-dark nav-item nav-link-edit"><i class="fa fa-search"
+                                        aria-hidden="true"></i></button>
+                                <a *ngIf='isReset==true' class="btn-reset" href="" (click)='getListAtStart(); isSearch=false'>Reset</a></span>
+
                     </th>
                 </tr>
 
@@ -59,14 +65,7 @@
                 </tr>
             </tbody>
         </table>
-        <div class="btn-right">
-            <button (click)='search(); isReset=true' type="submit"
-                class="btn confirmBtn border border-dark nav-item nav-link-edit"><i class="fa fa-search"
-                    aria-hidden="true"></i></button>
-        </div>
-        <div *ngIf='isReset==true'>
-            <span class="btn-reset"><a href="" (click)='getListAtStart(); isSearch=false'>Reset</a></span>
-        </div>
+
 
     </div>
     <br>
