--- a/src/app/add-credit/add-credit.component.css
+++ b/src/app/add-credit/add-credit.component.css
@@ -8,9 +8,6 @@
     font-size: 20px;
 }
 
-.link {
-    color: #46afec;
-}
 
 input{
     border: 1px solid #46afec;
@@ -32,4 +29,12 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+
+
+@media screen and (max-width: 840px) {
+    .val {
+        font-size: 17px;
+    }
 }
