--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -17,7 +17,7 @@
                     </th>
                     <th class="txn"><select id="txn" class="dropdown-toggle inp selectField btn w-100"
                             data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <option value="" disabled selected>
+                            <option value="" selected>
                                 Select an Option
                             </option>
                             <option value="Credit">Credit</option>
@@ -27,7 +27,9 @@
                     <th class="text-center">
                         <button type="submit"
                             class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
-                            (click)="onSubmit()">Search</button>
+                            (click)="onSubmit(); isReset=true"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            &nbsp;<a *ngIf='isReset==true' class="btn-reset" href=""
+                            (click)='getListAtStart(); isSearch=false'>Reset</a>
                     </th>
                 </tr>
 
@@ -38,32 +40,18 @@
                     <th class="text-center">Transaction Date</th>
                 </tr>
             </thead>
-            <tbody  *ngIf='isSearch==false'>
-                <tr id="tbody" *ngFor='let customer of customers | paginate: { itemsPerPage: 7, currentPage: p }'>
-                    <td class="text-center name"><a (click)="sendData(customer)" class="blue  "
+            <tbody>
+                <tr id="tbody" class="" *ngFor='let customer of customers | paginate: { itemsPerPage: 6, currentPage: p }'>
+                    <td class="text-center name pt-2"><a (click)="sendData(customer)" class="blue  "
                             [routerLink]="['/credit']">{{customer.name}}</a></td>
-                    <td class="text-center phone">{{customer.phone}}</td>
-                    <td class="text-center txn" *ngIf='customer.amount<0'>
+                    <td class="text-center phone pt-2">{{customer.phone}}</td>
+                    <td class="text-center txn pt-2" *ngIf='customer.amount<0'>
                         <p class="red">{{customer.amount}}</p>
                     </td>
-                    <td class="text-center txn" *ngIf='customer.amount>=0'>
+                    <td class="text-center txn pt-2" *ngIf='customer.amount>=0'>
                         <p class="green  ">{{customer.amount}}</p>
                     </td>
-                    <td class="text-center">{{customer.date | date:'medium' }}</td>
-                </tr>
-            </tbody>
-            <tbody  *ngIf='isSearch==true'>
-                <tr id="tbody" *ngFor='let customer of customers | paginate: { itemsPerPage: 7, currentPage: p }'>
-                    <td class="text-center name"><a (click)="sendData(customer)" class="blue  "
-                            [routerLink]="['/credit']">{{customer.name}}</a></td>
-                    <td class="text-center phone">{{customer.phone}}</td>
-                    <td class="text-center txn" *ngIf='customer.amount<0'>
-                        <p class="red">{{customer.amount}}</p>
-                    </td>
-                    <td class="text-center txn" *ngIf='customer.amount>=0'>
-                        <p class="green  ">{{customer.amount}}</p>
-                    </td>
-                    <td class="text-center">{{customer.date | date:'medium' }}</td>
+                    <td class="text-center pt-2">{{customer.date | date:'medium' }}</td>
                 </tr>
             </tbody>
         </table>
