--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="router.url === '/home/reports'" class="container mt-2">
+
     <div class="row">
         <table id="tbl" class="table table-bordered">
             <thead>
@@ -28,10 +29,12 @@
                             class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
                             data-toggle="modal" data-target="#dateModal">Select
                             Date</button>
-                            <span> <button (click)='search(); isReset=true' type="submit"
-                                    class="btn confirmBtn border border-dark nav-item nav-link-edit"><i class="fa fa-search"
-                                        aria-hidden="true"></i></button>
-                                <a *ngIf='isReset==true' class="btn-reset" href="" (click)='getListAtStart(); isSearch=false'>Reset</a></span>
+                        <button (click)='search(); isReset=true' type="submit"
+                            class="btn confirmBtn border border-dark nav-item nav-link-edit ml-3"><i class="fa fa-search"
+                                aria-hidden="true"></i></button>
+         
+                                <a *ngIf='isReset==true' class="btn-reset" href=""
+                                    (click)='getListAtStart(); isSearch=false' style="padding-bottom: 120px;">Reset</a>
 
                     </th>
                 </tr>
